--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.21.1",
-    "classnames": "^2.2.6",
-    "normalize.css": "^8.0.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.0.0"
+      "axios": "^0.21.1",
+      "classnames": "^2.2.6",
+      "normalize.css": "^8.0.1",
+      "react": "^16.9.0",
+      "react-dom": "^16.9.0",
+      "react-scripts": "3.0.0",
+      "prop-types": "^15.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,7 +19,9 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public --ci",
     "build-storybook": "build-storybook -s public",
-    "cypress": "cypress open -P ."
+    "cypress": "cypress open -P .",
+    "testDB": "set NODE_ENV=test",
+    "developmentDB": "set NODE_ENV=development"
   },
   "browserslist": {
     "production": [
