--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-      "axios": "^0.21.1",
-      "classnames": "^2.2.6",
-      "normalize.css": "^8.0.1",
-      "react": "^16.9.0",
-      "react-dom": "^16.9.0",
-      "react-scripts": "3.0.0",
-      "prop-types": "^15.7.2"
+    "axios": "^0.21.1",
+    "classnames": "^2.2.6",
+    "normalize.css": "^8.0.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-scripts": "3.0.0",
+    "prop-types": "^15.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,6 +46,7 @@
     "@testing-library/react": "^8.0.7",
     "@testing-library/react-hooks": "^5.0.3",
     "babel-loader": "^8.0.5",
+    "cypress": "^6.5.0",
     "node-sass": "^4.14.0",
     "prop-types": "^15.7.2",
     "react-test-renderer": "^16.8.6"
